--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
+    <string name="start_auth">Authorize</string>
+    <string name="user_token_hint">Paste token here</string>
+    <string name="save_button">Save</string>
 </resources>
