--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
     <string name="app_widget_description">This is an app widget description</string>
-    <string name="start_auth">Authorize</string>
+    <string name="start_auth">Get Trello Key</string>
     <string name="user_token_hint">Paste token here</string>
     <string name="save_button">Save</string>
     <string name="authorize">Authorize</string>
+    <string name="log_out">Log Out</string>
 </resources>
